# LvsheProject-2.0

./: .dockerignore  .env.example  .env.example.dashscope  .env.example.openai  .env.example.zhipu  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  start.bat  start.ps1  test_imports.py  红岩网校Agent方向学习项目报告.md  红岩考核技术栈检查报告.md
backend/: config.py  main.py
backend/api/: contract_routes.py  expert_routes.py  routes.py  schemas.py
backend/core/: agents.py  contract_annotator.py  contract_pipeline.py  court_agents.py  court_constants.py  court_orchestrator.py  debate_adapter.py  graph_rag.py  gui_agent.py  image_rag.py  llm_gateway.py  memory.py  multi_agents.py  rag.py  safe_commands.py  skills.py
backend/utils/: document_parser.py
frontend/: Home.py  api_client.py
frontend-next/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
pytest-of-Administrator/: pytest-current
reports/: 3.4.md  任务一_Experience_Products体验报告.md  任务七_GUI_Agents图形界面Agent报告.md  任务三_Further_RAG进阶RAG报告.md  任务二_Master_Stacks技术栈报告.md  任务五_Agent_Skills技能系统报告.md  任务八_Multi-Agent_System多智能体报告.md  任务六_Agent_Memory记忆系统报告.md  任务四_Autonomous_Agents自主Agent报告.md
tests/: check_llm.py  test-unstructured.docx  test_agents.py  test_all_routes.py  test_api.py  test_chat_endpoints.py  test_chunk_delta.py  test_config.py  test_frontend_api_client.py  test_graph_rag_connection.py  test_gui_agent.py  test_litellm_stream.py  test_llm_gateway.py  test_memory.py  test_multi_agents.py  test_rag.py  test_skills.py  test_sse_endpoint.py  test_stream_debug.py
(+72 files in other folders)
